# cool_player

./: .gitignore  CMakeLists.txt  cool_player  main.cpp
include/: ArgParser.hpp  AudioPlayer.hpp
src/: ArgParser.cpp  AudioPlayer.cpp
